[Regression][Bisected] output to VR headset fails with "*ERROR* dc_stream_state is NULL for crtc '1'!"
Brief summary of the problem:
Output to the Valve Index Virtual Reality headset fails completely every time with the following errors in the kernel logs:
[ 46.815873] [drm:dm_vblank_get_counter [amdgpu]] *ERROR* dc_stream_state is NULL for crtc '1'!
[ 46.815996] [drm:dm_crtc_get_scanoutpos [amdgpu]] *ERROR* dc_stream_state is NULL for crtc '1'!
[ 46.816083] [drm:dm_vblank_get_counter [amdgpu]] *ERROR* dc_stream_state is NULL for crtc '1'!
I initially encountered this issue moving from Debian's linux-image-5.14.0-4-amd64
to linux-image-5.15.0-1-amd64
. Using git bisect
, I was able to find the following commit as the source of the issue: https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git/commit/?h=v5.15.4&id=61d861cf478576d85d6032f864360a34b26084b1
Hardware description:
- CPU:
AMD Ryzen 9 5950X 16-Core Processor
- GPU: Radeon RX 6900 XT (
2f:00.0 VGA compatible controller [0300]: Advanced Micro Devices, Inc. [AMD/ATI] Navi 21 [Radeon RX 6800/6800 XT / 6900 XT] [1002:73bf] (rev c0)
) - System Memory: 32G
- Display(s): external Full HD monitor, Valve Index
- Type of Display Connection: DisplayPort
System information:
- Distro name and Version: Debian testing
- Kernel version: 5.15.0 and newer
How to reproduce the issue:
- Boot
- Plug in Valve Index
- Launch Steam VR
Attached files:
Log files
- kern.log from boot to crash on 61d861cf478576d85d6032f864360a34b26084b1: kern.log
Edited by Claire